--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="./manifest.json" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/png" href="./public/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
-    <link rel="shortcut icon" href="./public/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Homayonazar" />
-    <link rel="manifest" href="./public/site.webmanifest" />
-    <title>Homayonazar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+  <link rel="shortcut icon" href="./favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+
+  <!-- iOS PWA Title -->
+  <meta name="apple-mobile-web-app-title" content="Homayonazar" />
+
+  <title>Homayonazar</title>
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <div id="root"></div>
+
+  <!-- React entry -->
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
